[package]
name = "eval-runner"
version = "0.1.0"
edition = "2024"
description = "CLI tool for running LLM evals with YAML test cases and LLM-as-judge scoring"
license = "MIT OR Apache-2.0"

[dependencies]
agent-doc = { path = "../agent-doc" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
